--- a/balanca/templates/balanca/formulario_remessa.html
+++ b/balanca/templates/balanca/formulario_remessa.html
@@ -17,7 +17,7 @@
       /* Hero section (banner superior) */
       .hero {
           position: relative;
-          height: 60vh; /* altura do banner */
+          height: 80vh; /* altura do banner */
           background: url("{% static 'balanca/images/warehouse.jpg' %}") center center no-repeat;
           background-size: cover;
           display: flex;
@@ -33,6 +33,8 @@
           position: relative;
           z-index: 1; /* Fica acima do overlay */
           text-align: center;
+          color: #fff;
+          padding-top: 10%; /* empurra o conteúdo para baixo */
       }
       .hero-content h1 {
           font-size: 3rem;
