--- a/balanca/templates/balanca/formulario_remessa.html
+++ b/balanca/templates/balanca/formulario_remessa.html
@@ -17,7 +17,7 @@
       /* Hero section (banner superior) */
       .hero {
           position: relative;
-          height: 80vh; /* altura do banner */
+          height: 60vh; /* altura do banner */
           background: url("{% static 'balanca/images/warehouse.jpg' %}") center center no-repeat;
           background-size: cover;
           display: flex;
@@ -50,7 +50,7 @@
           background: rgba(255, 255, 255, 0.05); /* Caixa semitransparente */
           border-radius: 8px;
           padding: 2rem;
-          margin-top: -3rem; /* Sobe a seção para sobrepor parte do banner */
+          /*margin-top: -3rem; /* Sobe a seção para sobrepor parte do banner */
           box-shadow: 0 0 20px rgba(0,0,0,0.3);
       }
 
